--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,4 +1,4 @@
 #searchBoxContainer.win-searchbox
   input#searchBoxId.win-searchbox-input(type='search', placeholder='Search for a product')
-
+  span#cancel
 #productResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
