--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,7 +5,7 @@ html
     title Elsie
     link(rel='stylesheet', href='css/lib/ui-light.css')
     link(rel='stylesheet', href='css/app.css')
-    // WinJS @ 6ca0ffc
+    // WinJS @ 3.0.1
     script(src="js/lib/base.js")
     script(src="js/lib/ui.js")
     script(src="js/lib/fastclick.js")
