--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -146,6 +146,7 @@ progress::-webkit-progress-value {
         height: 42px;
         width: 45%;
         margin-left: 5%;
+        margin-top: 3px;
         float: left;
         background: url('../img/logo_text.png') no-repeat left center;
         background-size: contain;
