--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -449,6 +449,8 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
 .win-listview .win-horizontal .win-listlayout .win-itemscontainer, .win-listview.win-groups .win-horizontal .win-listlayout .win-itemscontainer.win-laidout, .win-listview .win-horizontal .win-listlayout .win-itemsblock, .win-listview .win-horizontal .win-gridlayout .win-uniformgridlayout.win-itemscontainer.win-laidout, .win-listview .win-horizontal .win-gridlayout .win-uniformgridlayout .win-itemsblock {
     flex-direction: row;
     width: 100% !important;
+    height: 100% !important;
+    overflow: scroll;
     > .win-itemscontainer-padder {
         height: 0;
     }
