--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -447,6 +447,8 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
 
 // gridlayout overrides 
 .win-listview .win-horizontal .win-listlayout .win-itemscontainer, .win-listview.win-groups .win-horizontal .win-listlayout .win-itemscontainer.win-laidout, .win-listview .win-horizontal .win-listlayout .win-itemsblock, .win-listview .win-horizontal .win-gridlayout .win-uniformgridlayout.win-itemscontainer.win-laidout, .win-listview .win-horizontal .win-gridlayout .win-uniformgridlayout .win-itemsblock {
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
     flex-direction: row;
     width: 100% !important;
     height: 100% !important;
@@ -526,6 +528,8 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
     }
     &.tab {
         border-left: none;
+        -ms-flex-direction: column;
+        -webkit-flex-direction: column;
         flex-direction: column;
         padding: 0;
         width: 100%;
