watchlist add/remove on product view with backend support

--- a/src/jade/partials/tabs.jade
+++ b/src/jade/partials/tabs.jade
@@ -1,4 +1,4 @@
-h4.explanation#no-tabs(style="display: block;") Keep tabs on your favourite products. Add one now!
+h4.explanation#no-tabs(style="display: block;") You aren't watching any products. Look one up and star it to add it to the watchlist.
 
 #tabs
   #tabGrid(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.tabTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
