avoid id selection issues by moving watchlist to a class

--- a/src/jade/partials/product_details.jade
+++ b/src/jade/partials/product_details.jade
@@ -20,4 +20,4 @@
       span.key.win-type-medium 
         | ml x 
         span(data-win-bind="innerText: Elsie.Data.selectedProduct.total_package_units")
-  #watchlist
+  .watchlist
