--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -597,7 +597,7 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
     background: white;
     border: 2px #ddd solid;
     position: relative;
-    #watchlist {
+    .watchlist {
         height: 24px;
         width: 24px;
         background: url('../img/icon_watchlist-hollow.png') no-repeat center center;
