--- a/src/jade/stores.jade
+++ b/src/jade/stores.jade
@@ -1,2 +1,2 @@
 .elsie-title.solo Nearby Stores
-#closestStores(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none'}")
+#closestStores(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.storeTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none'}")
