restrict length of watchlist tile titles

--- a/src/jade/templates.jade
+++ b/src/jade/templates.jade
@@ -22,7 +22,7 @@
             br
             span.key.win-type-medium closest store
       .listItem-Detail
-        span(data-win-bind="textContent:name")
+        span(data-win-bind="textContent:name Elsie.Interface.restrictMaxCharacters")
 
   .storeResultsTemplate.listBox(data-win-control="WinJS.Binding.Template")
     .store.listItem
