--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -480,6 +480,14 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
     width: 50%;
 }
 
+.loader {
+    background: url('../img/loader.gif') no-repeat center center;
+    background-size: 100%;
+    width: 64px;
+    height: 64px;
+    display: none;
+}
+
 .listItem {
     width: 95%;
     //height: 70px;
