--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -485,6 +485,7 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
     background-size: 100%;
     width: 64px;
     height: 64px;
+    margin: 0 auto;
     display: none;
 }
 
