--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -483,9 +483,9 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
 .loader {
     background: url('../img/loader.gif') no-repeat center center;
     background-size: 100%;
-    width: 64px;
-    height: 64px;
-    margin: 0 auto;
+    width: 48px;
+    height: 48px;
+    margin: 40px auto;
     display: none;
 }
 
