--- a/src/jade/partials/store_inventory.jade
+++ b/src/jade/partials/store_inventory.jade
@@ -1,5 +1,5 @@
 .win-searchbox
   input#searchInventory(type="text",placeholder="Search for a product")
   span#cancel
-#explanation.explanation(style="display:block") Check this store's inventory for a specific product.
+h4.explanation(style="display:block") Check this store's inventory for a specific product.
 #storeInventory(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.inventoryTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none'}")
