--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,18 +6,18 @@ html
     link(rel='stylesheet', href='css/lib/ui-light.css')
     link(rel='stylesheet', href='css/app.css')
     // WinJS @ 3.0.1
-    script(src="js/lib/base.js")
-    script(src="js/lib/ui.js")
-    script(src="js/lib/fastclick.js")
+    script(src="js/lib/base.js",charset='utf-8')
+    script(src="js/lib/ui.js",charset='utf-8')
+    script(src="js/lib/fastclick.js",charset='utf-8')
     // Cordova 4.0.0
-    script(src='cordova.js')
+    script(src='cordova.js',charset='utf-8')
     // Elsie 1.2
-    script(src='js/_navigator.js')
-    script(src='js/_search.js')
-    script(src='js/_services.js')
-    script(src='js/_structure.js')
-    script(src='js/_ui.js')
-    script(src='js/app.js')
+    script(src='js/_navigator.js',charset='utf-8')
+    script(src='js/_search.js',charset='utf-8')
+    script(src='js/_services.js',charset='utf-8')
+    script(src='js/_structure.js',charset='utf-8')
+    script(src='js/_ui.js',charset='utf-8')
+    script(src='js/app.js',charset='utf-8')
   body(onload="window.onLoad()")
     #mini-bar
     #app(data-win-control="Application.PageControlNavigator")
