--- a/src/jade/partials/tabs.jade
+++ b/src/jade/partials/tabs.jade
@@ -1,4 +1,4 @@
-.loader
+#watchlist-loader.loader
 h4.explanation#no-tabs(style="display: block;") You aren't watching any products. Look one up and star it to add it to the watchlist.
 
 #tabs
