--- a/src/jade/templates.jade
+++ b/src/jade/templates.jade
@@ -57,3 +57,7 @@
         .info
           h6.package(data-win-bind="textContent:package")
           h6.abv(data-win-bind="textContent:alcohol_content Elsie.Interface.convertABVtoPercentage")
+
+  .groupHeaderTemplate(data-win-control="WinJS.Binding.Template")
+    .simpleHeaderItem
+      h2(data-win-bind="innerText: title")
