--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -562,6 +562,10 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
             background: url('../img/icon_sm_drink.png') no-repeat left;
             background-size: 12px auto;
         }
+        .release {
+            background: url('../img/icon_sm_date.png') no-repeat left;
+            background-size: 12px auto;
+        }
     }
     img.listItem-Image {
         height: 50px;
