--- a/src/jade/partials/releases.jade
+++ b/src/jade/partials/releases.jade
@@ -1,4 +1,4 @@
 #release-loader.loader
 
 #releases
-  #newReleases(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.productResultsTemplate'), selectionMode: 'none', groupHeaderTemplate: select('.groupHeaderTemplate'), layout: {type: WinJS.UI.GridLayout, orientation: 'vertical'}}")
+  #newReleases(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('.newReleaseTemplate'), selectionMode: 'none', groupHeaderTemplate: select('.groupHeaderTemplate'), layout: {type: WinJS.UI.GridLayout, orientation: 'vertical'}}")
